<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mealToday"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <ListView
        android:id="@+id/lvMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.6"
        android:entries="@array/menuList"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/choiceMenu"
        android:layout_marginTop="15dp"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/tvChoiceMenu"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/tv_name"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/titlelogo" />
    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tv_lb_material"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/etMaterial"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="0.4"
        android:gravity="top"
        android:inputType="textMultiLine"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btnSave"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:enabled="false"
            android:onClick="onSaveButtonClick"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/btn_save"
            android:textColor="#000000"
            android:backgroundTint="#EEFFFF" />

        <Button
            android:id="@+id/btnRandom"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/bt_Random"
            android:textColor="#000000"
            android:backgroundTint="#FFDBC9" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_marginLeft="30dp"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:backgroundTint="#FFFFFF"
            app:srcCompat="@drawable/gohan"
            android:onClick="onBackButtonClick"/>
    </LinearLayout>

</LinearLayout>





